@@ -1,20 +1,14 @@
-/*************************
-  Coppermine Photo Gallery
-  ************************
-  Copyright (c) 2003-2016 Coppermine Dev Team
-  v1.0 originally written by Gregory Demar
-
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License version 3
-  as published by the Free Software Foundation.
-
-  ********************************************
-  Coppermine version: 1.6.03
-  $HeadURL$
-  ********************************************
-  This file contains the overall, theme-independant stylesheet definitions.
-  Do NOT edit this file unless you REALLY know what you're doing!
-**********************************************/
+/**
+ * Coppermine Photo Gallery
+ *
+ * v1.0 originally written by Gregory Demar
+ *
+ * @copyright  Copyright (c) 2003-2020 Coppermine Dev Team
+ * @license    GNU General Public License version 3 or later; see LICENSE
+ *
+ * css/coppermine.css
+ * @since  1.6.08
+ */
 
 form {
     margin-top:0px;
@@ -134,6 +128,12 @@ form {
 
 .explanation {
     font-size: 80%;
+}
+
+.log-display {
+	list-style-type: square;
+    max-height: 800px;
+    overflow-y: scroll;
 }
 
 /** Filmstrip styles */
